crates/ty_python_semantic/resources/mdtest/snapshots/basic.md_-_Structures_-_Unresolvable_submodu…_(4fad4be9778578b7).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: basic.md - Structures - Unresolvable submodule imports
mdtest path: crates/ty_python_semantic/resources/mdtest/import/basic.md
---

# Python source files

## mdtest_snippet.py

```
1 | # Topmost component resolvable, submodule not resolvable:
2 | import a.foo  # error: [unresolved-import] "Cannot resolve imported module `a.foo`"
3 | 
4 | # Topmost component unresolvable:
5 | import b.foo  # error: [unresolved-import] "Cannot resolve imported module `b.foo`"
```

## a/__init__.py

```
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `a.foo`
 --> src/mdtest_snippet.py:2:8
  |
2 | import a.foo  # error: [unresolved-import] "Cannot resolve imported module `a.foo`"
  |        ^^^^^
  |
info: Searched in the following paths during module resolution:
info:   1. /src (first-party code)
info:   2. vendored://stdlib (stdlib typeshed stubs vendored by ty)
info: make sure your Python environment is properly configured: https://docs.astral.sh/ty/modules/#python-environment

```

```
error[unresolved-import]: Cannot resolve imported module `b.foo`
 --> src/mdtest_snippet.py:5:8
  |
5 | import b.foo  # error: [unresolved-import] "Cannot resolve imported module `b.foo`"
  |        ^^^^^
  |
info: Searched in the following paths during module resolution:
info:   1. /src (first-party code)
info:   2. vendored://stdlib (stdlib typeshed stubs vendored by ty)
info: make sure your Python environment is properly configured: https://docs.astral.sh/ty/modules/#python-environment

```
